# sod

./: .env.example  .gitignore  README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  llm_client.py  profiles.py  prompts.py
backend/app/api/: agents.py  health.py  news.py  pipeline.py  publisher.py  quality.py  telegram.py  texts.py  time_status.py
backend/app/core/: config.py  database.py
backend/app/integrations/: __init__.py  sefaria_client.py
backend/app/news/: models.py  repository.py  schemas.py  service.py  services.py
backend/app/pipeline/: __init__.py  news.py  schemas.py  service.py
backend/app/publisher/: __init__.py  schemas.py  service.py
backend/app/quality/: __init__.py  schemas.py  service.py
backend/app/utils/: jewish_calendar.py
docs/: chat-memory.md
docs/RU/: AGENTS.md  ARCHITECTURE.md  CHAT_MEMORY.md  VISION.md
infra/: Caddyfile  docker-compose.yml
infra/ollama/: README.md
infra/proxy/: nginx.conf
memory/codex_runs/: 2025-12-04_09-34.md  2025-12-04_10-02.md  2025-12-04_10-09.md  2025-12-04_10-20.md
scripts/: codex-memory-update.sh
web/: Dockerfile  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/news/: page.tsx
web/app/news/[id]/: page.tsx
